add login by nickname
