# backend/docs/swagger.json
@@ -38,12 +38,12 @@
                 "summary": "Auth",
                 "parameters": [
                     {
-                        "description": "register form",
+                        "description": "login form",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.registerForm"
+                            "$ref": "#/definitions/auth.loginForm"
                         }
                     }
                 ],
@@ -174,6 +174,23 @@
                 },
                 "msg": {
                     "type": "string"
+                }
+            }
+        },
+        "auth.loginForm": {
+            "type": "object",
+            "required": [
+                "email_or_nickname",
+                "password"
+            ],
+            "properties": {
+                "email_or_nickname": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "maxLength": 50,
+                    "minLength": 3
                 }
             }
         },
